--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,58 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Sinatra + Twitter Bootstrap</title>
+    <title>Zendesk Wall</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/application.js" type="text/javascript"></script>
+    <script src="/faye/client.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
-  	<link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
   </head>
+
   <body style="padding-top: 50px;">
-<!--
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
 
-            <a class="brand" href="#">
-              Sinatra + Twitter Bootstrap
-            </a>
+          <a class="brand" href="#">
+            Zendesk Wall
+          </a>
 
-            <ul class="nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="/secure/place">Secret</a></li>
-            </ul>
-
-            <ul class="nav pull-right">
-              <li class="dropdown">
-                <a href="#"
-                      class="dropdown-toggle"
-                      data-toggle="dropdown">
-                      <%=  "fdsfsdfds" %>
-                      <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                      <li><a href="/login/form">Login</a></li>
-                      <li><a href="/logout">Logout</a></li>
-                </ul>
-              </li>
-            </ul>
-
+          <ul class="nav pull-right">
+            <li class="dropdown">
+              <% if logged_in? %>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= person.name %>
+                <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="<%= url("/#{params[:subdomain]}/logout") %>">Logout</a></li>
+              </ul>
+              <% elsif params[:subdomain] %>
+                <a href="<%= url("/#{params[:subdomain]}/login") %>">Login</a>
+              <% end %>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
--->
 
+    <div class="container">
+      <%= alert %>
 
-	<div class="container">
-    <%= alert %>
-    <p>
-    <form>
-      <textarea rows="4" placeholder="Enter your message..." class="input-block-level"></textarea>
-      <button type="submit" class="btn">Submit</button>
-    </form>
-    </p>
-    <%= yield %>
-	</div>
+      <%= erb :_form %>
 
+      <%= yield %>
+    </div>
   </body>
 </html>
