--- a/views/_message.erb
+++ b/views/_message.erb
@@ -1,10 +1,17 @@
-<div class="row" style="margin-bottom: 5px">
+<div class="row-fluid message" id="message-<%= message.id %>">
   <div class="span1">
     <img src="<%= message.person.gravatar %>" style="width: 48px; height: 48px;" />
   </div>
+
   <div class="span11">
-    <strong><%= message.person.name %> <%= message.created_at.strftime("at %r on %D") %></strong>
-    <br />
     <%= message.body %>
+
+    <%= erb :_author, :locals => { :message => message }, :layout => false %>
+
+    <div class="children hide">
+      <% message.children.each do |child| %>
+        <%= erb :_child, :locals => { :message => child }, :layout => false %>
+      <% end %>
+    </div>
   </div>
 </div>
