--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,42 +8,16 @@
     <script src="/faye/client.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/application.css">
   </head>
 
-  <body style="padding-top: 50px;">
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-
-          <a class="brand" href="#">
-            Zendesk Wall
-          </a>
-
-          <ul class="nav pull-right">
-            <li class="dropdown">
-              <% if logged_in? %>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= person.name %>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="<%= url("/#{params[:subdomain]}/logout") %>">Logout</a></li>
-              </ul>
-              <% elsif params[:subdomain] %>
-                <a href="<%= url("/#{params[:subdomain]}/login") %>">Login</a>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
+  <body style="padding-top: 15px;">
+    <div class="container-fluid">
       <%= alert %>
 
-      <%= erb :_form %>
-
-      <%= yield %>
+      <div class="row-fluid">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
