--- a/views/_markdown.erb
+++ b/views/_markdown.erb
@@ -1,4 +1,4 @@
-<div id="markdown-reference">
+<div id="markdown-reference" class="info-box">
   <button class="btn toggle" data-toggle="#markdown-reference .content">
     <i class="icon-plus"></i>
     <i class="icon-minus" style="display: none;"></i>
