--- a/public/application.css
+++ b/public/application.css
@@ -25,6 +25,8 @@ body {
 
   padding-left: 10px;
   padding-bottom: 5px;
+
+  margin-left: -10px;
 }
 
 .children {
@@ -49,7 +51,7 @@ textarea {
   float: right;
 }
 
-#markdown-reference {
+.info-box {
   background-color: #F0F0F0;
 
   border-style: solid;
@@ -60,6 +62,15 @@ textarea {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+}
+
+.info-box:first-of-type {
+  margin-bottom: 10px;
+}
+
+.info-box h4 {
+  margin: 0;
+  line-height: 30px;
 }
 
 #markdown-reference div.content > div > :first-child {
@@ -75,11 +86,6 @@ textarea {
 
 #markdown-reference div.content > div:last-child {
   border-bottom-style: none;
-}
-
-#markdown-reference h4 {
-  margin: 0;
-  line-height: 30px;
 }
 
 #markdown-reference p {
@@ -106,4 +112,12 @@ textarea {
   padding-top: 4px;
   padding-bottom: 4px;
   margin: 0;
+}
+
+.most-liked-message {
+  margin-bottom: 5px;
+}
+
+.most-liked-author {
+  text-align: right;
 }
