--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Zendesk Wall</title>
-    <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/application.js" type="text/javascript"></script>
     <script src="/faye/client.js" type="text/javascript"></script>
