--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/application.js" type="text/javascript"></script>
-    <script src="/faye/client.js" type="text/javascript"></script>
     <script src="/faye.js" type="text/javascript"></script>
+    <script src="/faye.client.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/application.css">
