--- a/views/_child.erb
+++ b/views/_child.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="span11">
-    <%= message.body %>
+    <div class="message-body"><%= message.body %></div>
 
     <%= erb :_author, :locals => { :message => message }, :layout => false %>
   </div>
