--- a/views/_form.erb
+++ b/views/_form.erb
@@ -1,5 +1,5 @@
 <form action="<%= url("/#{params[:subdomain]}/message") %>" id="message" method="post">
-  <textarea rows="8" placeholder="Enter your message..." name="body" class="input-block-level"></textarea>
+  <textarea rows="8" placeholder="Enter your message using markdown..." name="body" class="input-block-level"></textarea>
   <input type="hidden" name="parent_id" id="parent-id" />
 
   <div id="preview-area" class="hide">
