add a title to the replying box

--- a/views/_form.erb
+++ b/views/_form.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div id="replying" class="hide alert">
-    <button type="button" class="close">&times;</button>
+    <button title="Post a top-level message" type="button" class="close">&times;</button>
     <span></span>
   </div>
 
