--- a/views/login.erb
+++ b/views/login.erb
@@ -1,1 +1,5 @@
-<a href="<%= url("/#{params[:subdomain]}/login") %>">Login</a>
+<div class="page-header">
+	<h1>Please login</h1>
+</div>
+
+<a href="<%= url("/#{params[:subdomain]}/login") %>" class="btn btn-primary btn-large">Login</a>
