--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span12">
+  <div class="col-12">
     <p>Go to /:subdomain to see your helpdesk-specific wall.</p>
   </div>
 </div>
