remove mentions of 'hide' class

--- a/views/_form.erb
+++ b/views/_form.erb
@@ -2,12 +2,12 @@
   <textarea rows="8" placeholder="Enter your message using markdown..." name="body" class="input-block-level"></textarea>
   <input type="hidden" name="parent_id" id="parent-id" />
 
-  <div id="preview-area" class="hide">
+  <div id="preview-area" style="display: none;">
     <button type="button" class="close">&times;</button>
     <div></div>
   </div>
 
-  <div id="replying" class="hide alert">
+  <div id="replying" class="alert" style="display: none;">
     <button title="Post a top-level message" type="button" class="close">&times;</button>
     <span></span>
   </div>
