--- a/views/_markdown.erb
+++ b/views/_markdown.erb
@@ -6,7 +6,7 @@
       <i class="icon-minus" style="display: none;"></i>
     </button>
 
-    <div class="content hide">
+    <div class="content" style="display: none;">
       <% markdown_examples.each do |example| %>
         <div>
           <%= render_text(example) %>
