--- a/views/_most_liked.erb
+++ b/views/_most_liked.erb
@@ -6,7 +6,7 @@
       <i class="icon-minus" style="display: none;"></i>
     </button>
 
-    <div class="content hide">
+    <div class="content" style="display: none;">
       <% most_liked.each do |message| %>
         <div class="most-liked-message">
           <%= message.body %>
