--- a/views/_author.erb
+++ b/views/_author.erb
@@ -10,10 +10,19 @@
       <i class="icon-envelope"></i>
     </button>
 
+      <button type="button" id="reply" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-original-title="" title=""><i class="icon-envelope"></i>
+    </button>
+
     <button class="btn toggle-children" title="Show the replies to this message">
       <i class="icon-list" ></i>
       <span><%= message.children.size %></span>
     </button>
+
+    <!--<button type="button" class="btn" data-toggle="collapse" data-target="#demo">
+      <i class="icon-envelope"></i>
+    </button>
+
+    <div id="demo" class="collapse"><textarea rows="4" cols="50" placeholder="Email address" autofocus=""></textarea></div>-->
     <% end %>
   </div>
 
@@ -22,3 +31,18 @@
     <%= message.person.name %>
   </p>
 </div>
+
+<div id="reply-content" class="hide">
+  <%= erb :_form %>
+</div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  $('#reply').popover({
+    html : true,
+    content: function() {
+      return $('#reply-content').html();
+    }
+  });
+});
+</script>
