--- a/views/_markdown.erb
+++ b/views/_markdown.erb
@@ -1,15 +1,13 @@
 <div id="markdown-reference">
-  <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-            Markdown Reference
-          </a>
-        </h4>
+  <div class="accordion" id="accordion2">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseMD">
+          Markdown Reference
+        </a>
       </div>
-      <div id="collapseOne" class="panel-collapse collapse">
-        <div class="panel-body">
+      <div id="collapseMD" class="accordion-body collapse">
+        <div class="accordion-inner">
           <div class="content">
             <% markdown_examples.each do |example| %>
             <div>
