--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="/application.css">
   </head>
 
-  <body style="padding-top: 15px;">
-    <div class="container">
+  <body style="padding-top: 40px;">
+    <div class="container" style="width: 700px">
       <%= alert %>
 
       <div>
